force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/leaseworks__Cash_Security_Deposit__c.object-meta.xml
<CustomObject>
    <description>Capture contractual Cash Security Deposit requirements in this section. This enables users to create SD invoices to collect these deposits and/or SD drawdowns corresponding payment obligations. The combined value of all Security Deposits represents the total contract exposure secured by this collective guarantee.</description>
    <label>Security Deposit</label>
    <nameField>
        <label>Cash Security Deposit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Deposit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>