force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/Interest_Compound_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Interest_Compound_Frequency__c</fullName>
    <label>Interest Compound Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>