force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/Interest_Index__c.field-meta.xml
<CustomField>
    <fullName>Interest_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interest Index</label>
    <referenceTo>leaseworks__Interest_Rate_Index__c</referenceTo>
    <relationshipLabel>Security Deposit</relationshipLabel>
    <relationshipName>Security_Deposit</relationshipName>
    <type>Lookup</type>
</CustomField>