force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/Interest_Index_Reference__c.field-meta.xml
<CustomField>
    <fullName>Interest_Index_Reference__c</fullName>
    <label>Interest Index Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>