force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/Interest_Margin__c.field-meta.xml
<CustomField>
    <fullName>Interest_Margin__c</fullName>
    <label>Interest Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>