force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/Interest_Refund_At__c.field-meta.xml
<CustomField>
    <fullName>Interest_Refund_At__c</fullName>
    <label>Interest Refund At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Lease End</fullName>
            </value>
            <value>
                <fullName>During Lease Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>