force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/Interest_Refund_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Interest_Refund_Frequency__c</fullName>
    <label>Interest Refund Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>