force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comments__c</fullName>
    <description>Enter a memo for the SD</description>
    <inlineHelpText>Enter a memo for the SD</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>