force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Deposit_Amount_Returned__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Amount_Returned__c</fullName>
    <description>This field shows the total Security Deposit amount that has been returned. It&#39;s formula calculated by adding all amounts paid out in cash and all amounts refunded through offsets. The value reflects the combined total of Paid Out Via Cash and Paid Out by Offset.
    [LOAD: No]
    [JUSTIFICATION: No needs to do load, because this is formula field which automatically gets calculated.]
    [REPLACEMENT OBJECT API: NA]
    [REPLACEMENT FIELD API: NA]
    [COMMENTS: NA]</description>
    <formula>leaseworks__Deposit_Returned__c +  leaseworks__Paid_by_Offset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the total security deposit amount paid out in cash or offset against open receivables. System calculated as sum of Paid Out via Cash and Paid Out by Offset.</inlineHelpText>
    <label>Deposit Amount Returned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>