force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the security deposit cash requirement has been satisfied</description>
    <inlineHelpText>Indicates that the security deposit cash requirement has been satisfied</inlineHelpText>
    <label>Deposit Received?</label>
    <type>Checkbox</type>
</CustomField>