force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Deposit_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Payments_Received__c</fullName>
    <description>This field shows the total cash receipts received against the invoiced Security Deposit amount. It is system-calculated by summing all approved autocreated SD payment lines, cash credit applications, and offsets that are applied to Security Deposit invoices. The value updates automatically whenever payments or credits linked to Security Deposit invoice lines are processed.
    [LOAD: No]
    [JUSTIFICATION: No needs to do load, because this field automatically populates after Payment creation.]
    [REPLACEMENT OBJECT API: NA]
    [REPLACEMENT FIELD API: NA]
    [COMMENTS: NA]</description>
    <inlineHelpText>Total cash receipts received against the invoiced SD amount; include offsets and cash credit applications. System calculated.</inlineHelpText>
    <label>Total Deposit Payments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>