force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Deposit_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Received_Date__c</fullName>
    <description>Date of the payment that brought total cash up to the required amount</description>
    <inlineHelpText>Date of the payment that brought total cash up to the required amount</inlineHelpText>
    <label>Deposit Received Date</label>
    <type>Date</type>
</CustomField>