force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Deposit_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Return_Date__c</fullName>
    <description>Date when the Security Deposit was returned</description>
    <inlineHelpText>Actual date on which the deposit was returned.</inlineHelpText>
    <label>Z_unused_2009 Deposit Return Date</label>
    <type>Date</type>
</CustomField>