force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Deposit_Return_Date_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Return_Date_F__c</fullName>
    <description>Date when the Security Deposit was returned</description>
    <formula>if( AND(leaseworks__Security_Depo_Cash__c == 0.0,
								NOT(OR (ISBLANK(leaseworks__Last_Deposit_Return_Date__c),  ISNULL(leaseworks__Last_Deposit_Return_Date__c)))),
leaseworks__Last_Deposit_Return_Date__c,null	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date of the payout that brought total cash on hand down to zero indicating that the deposit is fully returned.</inlineHelpText>
    <label>Deposit Returned Date</label>
    <type>Date</type>
</CustomField>