force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Is_Deposit_Returned__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Is_Deposit_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Unused Deposit Returned?</label>
    <type>Checkbox</type>
</CustomField>