force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <label>Lease</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Cash Security Deposit</relationshipLabel>
    <relationshipName>Cash_Security_Deposit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>