force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Lessee_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_New__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The lessee that is associated with the Security Deposit</description>
    <inlineHelpText>The lessee that is associated with the Security Deposit</inlineHelpText>
    <label>Lessee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Security Deposit</relationshipLabel>
    <relationshipName>SD_Lessee_New</relationshipName>
    <type>Lookup</type>
</CustomField>