force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Manual_SD_transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Manual_SD_transfer_Date__c</fullName>
    <description>Enter the effective date the Security Deposit amount was transferred from the previous lessor during novation.</description>
    <inlineHelpText>Enter the effective date the Security Deposit amount was transferred from the previous lessor during novation.</inlineHelpText>
    <label>Manual SD Transfer Date</label>
    <type>Date</type>
</CustomField>