force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Relative_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Relative_Due_Day__c</fullName>
    <description>If Relative chosen as Deposit Due Date Type, this field must be populated with the number of days prior to the Contractual Delivery Date is the deposit due for payment. ie, enter -30 for 30 days prior.</description>
    <inlineHelpText>If Relative chosen as Deposit Due Date Type, this field must be populated with the number of days prior to the Contractual Delivery Date is the deposit due for payment. ie, enter -30 for 30 days prior.</inlineHelpText>
    <label>Z_Unused_2203_Relative Due Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>