force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Remaining_Amount_to_be_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Remaining_Amount_to_be_Invoiced__c</fullName>
    <formula>leaseworks__Paid_by_Offset__c + leaseworks__Security_Deposit_Cash__c + leaseworks__Deposit_Returned__c -  leaseworks__Total_Invoiced_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount to be Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>