force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Security_Deposit__c</fullName>
    <label>Z_Unused Security Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>