force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Security_Deposit_Cash__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Security_Deposit_Cash__c</fullName>
    <description>Total security deposit amount in cash</description>
    <inlineHelpText>Total security deposit amount in cash</inlineHelpText>
    <label>Stipulated Security Deposit (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>