force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/leaseworks__Total_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Invoiced_Amount__c</fullName>
    <description>Total amount invoiced across the invoices raised</description>
    <inlineHelpText>Total amount invoiced across the invoices raised</inlineHelpText>
    <label>Total Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>