force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/fields/Replaced_by_LOC__c.field-meta.xml
<CustomField>
    <fullName>Replaced_by_LOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replaced by LOC?</label>
    <type>Checkbox</type>
</CustomField>