force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/validationRules/leaseworks__EnterRelativeDay.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__EnterRelativeDay</fullName>
    <active>true</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>For &quot;Relative&quot; due date type ,please enter value in the &quot;Relative Due Day&quot; field.</errorMessage>
</ValidationRule>