force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/validationRules/leaseworks__Manual_Date_Required_on_Manual_Amt.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Manual_Date_Required_on_Manual_Amt</fullName>
    <active>true</active>
    <description>Whenever the Manual SD Transfer Amount is not empty Manual SD transfer Date should not be empty</description>
    <errorConditionFormula>AND(
    NOT($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c),
    NOT(ISBLANK(leaseworks__Manual_SD_Transfer_Amount__c)),
    ISBLANK(leaseworks__Manual_SD_transfer_Date__c)
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Manual_SD_transfer_Date__c</errorDisplayField>
    <errorMessage>Enter a value for Manual SD Transfer Date if the Manual SD Transfer Amount is not blank</errorMessage>
</ValidationRule>