force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/validationRules/leaseworks__RemainingBalLessthanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__RemainingBalLessthanZero</fullName>
    <active>true</active>
    <description>The ‘Remaining Security Deposit Cash’ amount cannot be less than zero</description>
    <errorConditionFormula>leaseworks__Security_Depo_Cash__c &lt; 0.0</errorConditionFormula>
    <errorMessage>Security Deposit Available Balance cannot be less than 0.</errorMessage>
</ValidationRule>