force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/validationRules/leaseworks__SDCashPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__SDCashPositive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c),
leaseworks__Security_Deposit_Cash__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>leaseworks__Security_Deposit_Cash__c</errorDisplayField>
    <errorMessage>Please enter an amount greater than zero.</errorMessage>
</ValidationRule>