force-app/main/default/objects/leaseworks__Cash_Security_Deposit__c/validationRules/leaseworks__SdSlipAmountShouldNotGreaterThanSD.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__SdSlipAmountShouldNotGreaterThanSD</fullName>
    <active>true</active>
    <description>The Total Amount on SD Slip(s) (Total_Amount_on_SD_Slips__c) does not exceed the Stipulated Security Deposit (Cash) (Security_Deposit_Cash__c).</description>
    <errorConditionFormula>AND(
NOT($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c),
(leaseworks__Total_Amount_on_SD_Slips__c &gt; leaseworks__Security_Deposit_Cash__c),NOT(leaseworks__Security_Deposit_Cash__c &lt; 0)
)</errorConditionFormula>
    <errorMessage>Sum of amount on slips cannot be greater than the Stipulated Security Deposit (Cash)&apos;</errorMessage>
</ValidationRule>